--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,5 +54,66 @@
 }
 
 #body {
-    padding-bottom: 100px;
+    padding-bottom: 175px;
+}
+
+.content {
+    position: relative;
+    width: 400px;
+    overflow: hidden;
+    cursor: pointer;
+    border: 5px double #757472;
+    /*background: #0a112e;*/
+}
+.content img {
+    width: 100%;
+    opacity: 0.25;
+    transition: all 0.4s ease-in-out;
+}
+.content .text {
+    position: absolute;
+    top: 50%;
+    left: 30px;
+    right: 30px;
+    transform: rotate(0deg) translateY(-50%) scale(1);
+    transition: all 0.4s ease-in-out;
+}
+.content .text:before {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    left: 0; top: 0;
+    content: "";
+    display: block;
+    transition: all 0.35s ease-in-out;
+}
+.content .text:after {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    right: 0; bottom: 0;
+    content: "";
+    display: block;
+    transition: all 0.35s ease-in-out;
+}
+.content .text h3 {
+    font-family: 'Marmelad', sans-serif;
+    font-size: 26px;
+    line-height: 40px;
+    text-align: center;
+    color: #000;
+}
+.content:hover img {
+    opacity: 0.8;
+}
+.content:hover .text {
+  transform: rotate(-32deg) translateY(-50%) scale(0.9);
+}
+.content:hover .text:before {
+    width: 200%;
+}
+.content:hover .text:after {
+    width: 200%;
 }
